# ac-display

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  configuration.json.example  eslint.config.mjs  pyproxy-forward-ac-udp-to-linux.py
acudp/: build.sh
fuzz/: CMakeLists.txt  fuzz_acudp.cpp
fuzz/include/: curl_helper.h  gnutlsmm.h
fuzz/src/: curl_helper.cpp  fuzz_webserver_https.cpp  fuzz_webserver_https_request.cpp  fuzz_webserver_https_url.cpp  gnutlsmm.cpp  gnutlsmm_request.cpp
include/: ac_data.h  ac_display.h  acudp_thread.h  debug_sine_wave_update_thread.h  ip_address.h  settings.h  util.h  web_server.h
libmicrohttpd/: build.sh
resources/: dial.js  index.html  receive.js  style.css  util.js
src/: ac_data.cpp  ac_display.cpp  acudp_thread.cpp  debug_sine_wave_update_thread.cpp  ip_address.cpp  main.cpp  settings.cpp  util.cpp  web_server.cpp
test/data/: configuration.json
test/src/: acudp_test.cpp  settings_test.cpp  util_test.cpp  webserver_https_test.cpp
